This commit adds a JUnit test class for the `CarServiceImpl` class, named `CarServiceImplTest`. The test class contains test methods to cover all public methods of the `CarServiceImpl`, achieving 100% method coverage and 91% of line coverage.