@@ -1,6 +1,7 @@
 package com.CarRentalAgency.services;
 
 import com.CarRentalAgency.entity.Car;
+import com.CarRentalAgency.exception.AlreadyExistsException;
 import com.CarRentalAgency.repository.CarRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -17,7 +18,6 @@ import java.util.Optional;
 import static com.CarRentalAgency.entity.Car.Model.SPORTS_CAR;
 import static com.CarRentalAgency.entity.Car.Model.SUV;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
@@ -41,9 +41,11 @@ class CarServiceImplTest {
     @Mock
     private CarRepository carRepository;
 
+    // 2 cars for testing.
     Car car1;
     Car car2;
 
+    // list of cars for testing.
     List<Car> carList;
 
     @BeforeEach
@@ -78,8 +80,10 @@ class CarServiceImplTest {
     }
 
     @Test
-    void save() {
+    void testSaveCar_ShouldReturnTheSavedCar() {
+        // given
         Car car = car1;
+
         //when
         underTestService.saveCar(car);
         //then
@@ -88,7 +92,128 @@ class CarServiceImplTest {
     }
 
     @Test
-    void findAllCars_ShouldReturnListOfCars() {
+    void testSaveCar_ShouldThrowAlreadyExistsException() {
+        // given
+        Car newCar = car1;
+        Car existingCar = car2;
+
+        int registrationNumber = newCar.getRegistrationNumber();
+
+        // when
+        when(carRepository.findCarByRegistrationNumber(registrationNumber)).thenReturn(Optional.of(existingCar));
+
+        // then
+        assertThrows(AlreadyExistsException.class, () -> underTestService.saveCar(newCar));
+        verify(carRepository, times(0)).save(newCar);
+    }
+
+    @Test
+    void testDeleteCarByID_ShouldDeleteTheCar() {
+        // given;
+        Long id = car1.getId();
+
+        // when
+        when(carRepository.findById(id)).thenReturn(java.util.Optional.of(car1));
+        doNothing().when(carRepository).deleteCarById(id);
+
+        // then
+        // Verify that the car with the specified ID is deleted
+        assertDoesNotThrow(() -> underTestService.deleteCarById(id));
+        verify(carRepository, times(1)).deleteCarById(id);
+    }
+
+    @Test
+    void testDeleteCarById_ShouldThrowNoSuchElementException() {
+        // given
+        Long id = 1L;
+
+        // when
+        when(carRepository.findById(id)).thenReturn(Optional.empty());
+
+        // then
+        // Verify that the NoSuchElementException is thrown when the car with the specified ID does not exist
+        assertThrows(NoSuchElementException.class, () -> underTestService.deleteCarById(id));
+        verify(carRepository, times(0)).deleteCarById(id);
+    }
+
+    @Test
+    public void testUpdateCarWithANonUsedRegistrationNumber_ShouldReturnTheNewCar() {
+        // given
+        Car existingCar = car1;
+        long carId = existingCar.getId();
+
+        Car newCar = car2;
+
+        // when
+        when(carRepository.findById(carId)).thenReturn(Optional.of(existingCar));
+        when(carRepository.findCarByRegistrationNumber(newCar.getRegistrationNumber())).thenReturn(Optional.empty());
+        when(carRepository.save(existingCar)).thenReturn(existingCar);
+
+        Car updatedCar = underTestService.updateCar(carId, newCar);
+
+
+        // then
+        verify(carRepository, times(1)).save(existingCar);
+        assertEquals(newCar.getRegistrationNumber(), updatedCar.getRegistrationNumber());
+        assertEquals(newCar.getName(), updatedCar.getName());
+        assertEquals(newCar.getModel(), updatedCar.getModel());
+        assertEquals(newCar.getRegistrationNumber(), updatedCar.getRegistrationNumber());
+        assertEquals(newCar.getSeats(), updatedCar.getSeats());
+        assertEquals(newCar.getGear(), updatedCar.getGear());
+        assertEquals(newCar.getDoors(), updatedCar.getDoors());
+        assertEquals(newCar.getKilometres(), updatedCar.getKilometres());
+        assertEquals(newCar.getFuel(), updatedCar.getFuel());
+    }
+
+    @Test
+    public void testUpdateCarWithAlreadyUsedRegistrationNumber() {
+        // Given
+        Car existingCar = car1;
+
+        long id = existingCar.getId();
+
+        Car newCar = car2;
+        int newCarRegistrationNumber = newCar.getRegistrationNumber();
+
+        when(carRepository.findById(id))
+                .thenReturn(Optional.of(existingCar));
+
+        when(carRepository.findCarByRegistrationNumber(newCarRegistrationNumber))
+                .thenReturn(Optional.of(newCar));
+
+        // When
+        AlreadyExistsException exception = assertThrows(
+                AlreadyExistsException.class,
+                () -> underTestService.updateCar(id, newCar)
+        );
+
+        // Then
+        assertEquals(
+                String.format("The registration number %d was used by another car", newCar.getRegistrationNumber()),
+                exception.getMessage()
+        );
+
+        verify(carRepository, never()).save(existingCar);
+    }
+
+    @Test
+    public void testUpdateCar_ShouldThrowNoSuchElementException() {
+        // given
+        Car newCar = car1;
+        Long id = 1L;
+
+        // when
+        when(carRepository.findById(id)).thenReturn(Optional.empty());
+
+        // then
+        assertThrows(NoSuchElementException.class, () -> underTestService.updateCar(id, newCar));
+
+        verify(carRepository, times(0)).findCarByRegistrationNumber(anyInt());
+        verify(carRepository, times(0)).save(any(Car.class));
+    }
+
+    @Test
+    void testFindAllCars_ShouldReturnListOfCars() {
         // given
         carList = Arrays.asList(car1, car2);
 
@@ -102,69 +227,44 @@ class CarServiceImplTest {
     }
 
     @Test
-
-    void findAllCars_ShouldThrowNoSuchElementException() {
-      /*  // we will throw the exception because we have a emty list.
-
-        //given
-        carList = Arrays.asList();
-
-        //when
-        given(carRepository.findAll()).willReturn(carList);
-
-        //then
-        assertThrows(NoSuchElementException.class,
-                () -> underTestService.findAll()
-        );*/
-
-        final String OUT_PUT_Message = "NO CAR ";
-
-        assertThatExceptionOfType(NoSuchElementException.class)
-                .isThrownBy(()->underTestService.findAll());
-
-
-
-    }
-
-    @Test
-    void findCarById_ShouldReturnTheCar() {
+    void testFindCarById_ShouldReturnTheCar() {
         // given
-        Car expected = car1;
+        Car expectedCar = car1;
 
         // when
-        given(carRepository.findById(1L)).willReturn(Optional.ofNullable(expected));
+        when(carRepository.findById(1L)).thenReturn(Optional.of(expectedCar));
 
         //then
-        assertEquals(expected, underTestService.findCarById(1L));
-
+        assertEquals(expectedCar, underTestService.findCarById(1L));
     }
 
     @Test
-    void findCarById_ShouldThrowNoSuchElementException() {
+    void testFindCarById_ShouldThrowNoSuchElementException() {
+        // given
+        long nonExistingID = 999_999_999L;
 
-        Long nonExistingID = 999_999_999L;
-
+        // then
         assertThrows(NoSuchElementException.class,
                 () -> underTestService.findCarById(nonExistingID)
         );
     }
 
     @Test
-    void findCarByRegistrationNumber_ShouldReturnTheCar() {
+    void testFindCarByRegistrationNumber_ShouldReturnTheCar() {
         // given
-        car1.setRegistrationNumber(125);
+        int registrationNumber = car1.getRegistrationNumber();
 
         //when
-        given(carRepository.findCarByRegistrationNumber(125)).willReturn(Optional.ofNullable(car1));
+        given(carRepository.findCarByRegistrationNumber(registrationNumber)).willReturn(Optional.ofNullable(car1));
 
         //then
-        assertThat(underTestService.findCarByRegistrationNumber(125))
+        assertThat(underTestService.findCarByRegistrationNumber(registrationNumber))
                 .isEqualTo(car1);
     }
 
     @Test
-    void findCarByRegistrationNumber_ShouldThrowNoSuchElementException() {
-        int nonExistingRegistrationNumber = 99999;
+    void testFindCarByRegistrationNumber_ShouldThrowNoSuchElementException() {
+        int nonExistingRegistrationNumber = 999_999_999;
 
         assertThrows(NoSuchElementException.class,
                 () -> underTestService.findCarByRegistrationNumber(nonExistingRegistrationNumber)
@@ -172,34 +272,21 @@ class CarServiceImplTest {
     }
 
     @Test
-    void findCarByCarName_ShouldReturnListOfCars() {
+    void testFindCarByCarName_ShouldReturnListOfCars() {
         //given
         final String CAR_NAME = "Mercedes-Benz GLC Class GLC300";
         car1.setName(CAR_NAME);
-        carList = Arrays.asList(car1);
+        carList = List.of(car1);
 
         //when
         given(carRepository.findCarsByCarName(CAR_NAME)).willReturn(carList);
 
         //then
         assertEquals(underTestService.findCarsByCarName(CAR_NAME), carList);
-
     }
 
     @Test
-    void findCarByCarName_ShouldThrowNoSuchElementException() {
-
-        //given
-        final String CAR_NAME = "THIS CAR NAME DOESNT EXIST IN OUR UNIVERSE";
-
-        //then
-        assertThrows(NoSuchElementException.class,
-                () -> underTestService.findCarsByCarName(CAR_NAME)
-        );
-    }
-
-    @Test
-    void findCarsByKilometresLessThanEqual_ShouldReturnListOfCars() {
+    void testFindCarsByKilometresLessThanEqual_ShouldReturnListOfCars() {
         final int KILOMETRES = 500_000;
 
         car1.setKilometres(100_000);
@@ -219,26 +306,8 @@ class CarServiceImplTest {
                 .hasSize(2);
     }
 
-
     @Test
-    void findCarsByKilometresLessThanEqual_ShouldThrowNoSuchElementException() {
-
-        //given
-        final int KILOMETRES = 50_000;
-
-        car1.setKilometres(100_000);
-
-        car2.setKilometres(200_000);
-
-        //then
-        assertThrows(NoSuchElementException.class,
-                () -> underTestService.findCarsByKilometresLessThanEqual(KILOMETRES)
-        );
-
-    }
-
-    @Test
-    void findCarsByKilometresGreaterThanEqual_ShouldReturnListOfCars() {
+    void testFindCarsByKilometresGreaterThanEqual_ShouldReturnListOfCars() {
         //given
         final int KILOMETRES = 5_000;
 
@@ -258,25 +327,7 @@ class CarServiceImplTest {
     }
 
     @Test
-    void findCarsByKilometresGreaterThanEqual_ShouldThrowNoSuchElementException() {
-
-        //given
-        final int KILOMETRES = 500_000;
-
-        car1.setKilometres(20_000);
-
-        car2.setKilometres(80_000);
-
-        //then
-        assertThrows(NoSuchElementException.class,
-                () -> underTestService.findCarsByKilometresGreaterThanEqual(KILOMETRES)
-        );
-
-    }
-
-
-    @Test
-    void findCarsByModel_ShouldReturnListOfCars() {
+    void testFindCarsByModel_ShouldReturnListOfCars() {
         //given
         final Car.Model MODEL = SPORTS_CAR;
 
@@ -293,19 +344,4 @@ class CarServiceImplTest {
                 .hasSize(2)
                 .contains(car1, car2);
     }
-
-    @Test
-    void findCarsByModel_ShouldThrowNoSuchElementException() {
-        //given
-        final Car.Model MODEL = SPORTS_CAR;
-
-        car1.setModel(MODEL);
-        car2.setModel(MODEL);
-
-        assertThrows(NoSuchElementException.class,
-                () -> underTestService.findCarsByModel(SUV)
-        );
-    }
-
-
 }
